--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="title_search">Search</string>
     <string name="title_sing">Sing</string>
     <string name="title_support">Support</string>
+    <string name="title_settings">Settings</string>
     <string name="title_text_format">Text Format</string>
     <string name="title_undo">Undo</string>
     <string name="title_new">New</string>
